popovers: Fix alignment of icons in sidebar and msg action popovers.
The regression was introduced in c8f346b5e55ccaae0374d960e514e8d528fddd5d.
Reverted the change that caused the regression and introduced a
new fix.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -101,7 +101,14 @@ ul {
         width: 14px;
         text-align: center;
         margin-right: 3px;
-        vertical-align: middle;
+
+        &.zulip-icon {
+            /* These icons are different from font awesome icons,
+                so they need to be aligned separately. */
+            line-height: 14px;
+            position: relative;
+            top: 2px;
+        }
     }
 
     &.topics_popover {
